--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -2,6 +2,6 @@
     <ul>
     <a href="/"><li>Accueil</li></a>
     <a href="/article"><li>Article</li></a>
-    <a href="/category"><li>Catégorie</li></a>
+    <a href="/categorie"><li>Catégorie</li></a>
     </ul>
 </nav>
