--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -1,17 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ArticleController!{% endblock %}
+{% block title %}{{categorie.name}} {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h2> {{categorie.name}} </h2>
+    <p> {{categorie.description}} </p>
+    <a href=".">Retour</a>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-    <a href="./article/new">Ajouter un article</a>
-    <table class="user">
+
+<table class="user">
             <thead>
                 <tr>
                     <th>Titre</th>
@@ -38,13 +35,4 @@
             {% endfor %}
             </tbody>
     </table>
-
-    {{ knp_pagination_render(articles) }}
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/app/src/Controller/ArticleController.php'|file_link(0) }}">src/Controller/ArticleController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/app/templates/article/index.html.twig'|file_link(0) }}">templates/article/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
