--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,12 +9,14 @@
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+        
     </head>
     {% include "partials/_nav.html.twig" %}
     <body>
+        {% include "partials/_flash.html.twig" %}
         {% block body %}{% endblock %}
     </body>
+    {% block javascripts %}
+            {#{{ encore_entry_script_tags('app') }}#}
+    {% endblock %}
 </html>
